--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -7,8 +7,8 @@ $background-color-fifth: #FFFFFF;
 $color-text-primary:  #0E0E0F;
 $color-text-secondary:  #00B9B6;
 $color-text-tertiary: #333333;
-// $color-text-quaternary: #F2582D;
-// $color-text-active:  #FFFFFF;
+// $color-text-quaternary: #FFFFFF;
+$color-text-active:  #FFFFFF;
 
 //hamburger
 // $background-color-hamburger-primary: #fbe5e3; 
