--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,10 +3,288 @@
 @import 'fonts';
 @import 'vars';
 // @import 'hamburgers';
-
+body{
+	background-color: $background-color-primary;
+	backdrop-filter: blur(350px);
+}
 .container{
     width: 100%;
-    max-width: 1280px;
+    max-width: 1270px;
     padding: 0 15px;
     margin: 0 auto;
+}
+.header{
+		padding: 15px 0;
+		&__container{
+			display: flex;
+			align-items: center;
+      justify-content: space-between; 
+		}		
+}
+.nav{
+	&__list{
+		display: flex;
+	}
+	&__item{
+		margin-right: 40px;
+	}
+	&__link{
+		@include font-primary(18px, $color-text-primary, 500, 22px);
+	}
+}
+.auth{
+	display: flex;
+	align-items: center;
+	&__select{
+		@include font-primary(18px, $color-text-primary, 500, 22px);
+		margin-right: 38px;
+	}
+	&__svg{
+		margin-right: 6px;
+	}
+	&__button{
+		@include font-primary(16px, $color-text-button, 500, 19px);
+		background: $background-color-button;
+		box-shadow: 0px 15px 30px rgba(220, 232, 243, 0.25);
+		border-radius: 12px;
+		padding: 12px 30px;
+	}
+}
+.session{
+	&__container{
+		display: flex;
+		align-items: center;
+		margin-top: 105px;
+	}
+	&__subtitle{
+		@include font-secondary(18px, $color-text-secondary, 400, 25px);
+	}
+	&__title{
+		@include font-primary(48px, $color-text-primary, 700, 57px);
+		max-width: 644px;
+	}
+	&__button{
+		@include font-primary(18px, $color-text-button, 700, 21px);
+		background: $background-color-button;
+		box-shadow: 0px 15px 30px rgba(220, 232, 243, 0.25);
+		border-radius: 12px;
+		padding: 12px 30px;
+		margin-top: 50px;
+	}
+	&__figure{
+		display: flex;
+    flex-shrink: 0;
+    max-width: 468px;
+    height: 460px;
+    overflow: hidden;
+	}
+	&__img{
+		display: block;
+		object-fit: contain;
+	}
+}
+.application{
+	&__container{
+		display: flex;
+		justify-content: center;
+		margin-top: 155px;
+	}
+	&__figure{
+		margin-right: 50px;
+	}
+	&__title{
+		@include font-primary(32px, $color-text-primary, 700, 38px);
+		max-width: 450px;	
+	}
+	&__content{
+		display: flex;
+		margin-top: 35px;
+	}
+	&__content-title{
+		@include font-primary(24px, $color-text-secondary, 600, 33px);
+		margin-top: 5px;
+	}
+	&__content-subtitle{
+		@include font-primary(16px, $color-text-tertiary, 400, 22px);
+		max-width: 345px;
+		margin-top: 5px;
+	}
+	&__content-titles{
+		display: flex;
+		flex-direction: column;
+	}
+}
+.psychologists{
+	&__container{
+		margin-top: 140px;
+	}
+	&__title{
+		@include font-primary(32px, $color-text-primary, 700, 38px);
+		text-align: center;
+	}
+	&__list{
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		margin-top: 40px;
+	}
+	&__item{
+		margin-right: 15px;
+		margin-top: 15px;
+		background-color: $color-text-button;
+		box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.05);
+		border-radius: 12px;
+		padding: 10px 30px;
+	}
+	&__item-last{
+		background-color: $background-color-quaternary;
+	}
+	&__link{
+		@include font-primary(18px, $color-text-tertiary, 400, 22px);
+	}
+	&__link-last{
+		color: $color-text-active;
+	}
+	&__link-active{
+		@include font-primary(18px, $color-text-secondary, 400, 22px);
+	}
+	&__card{
+		display: flex;
+		justify-content: space-between;
+		margin-top: 60px;
+	}
+	&__arcticle{
+		margin-right: 20px;
+		background-color: $background-color-fifth;
+		box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.05);
+		border-radius: 12px;
+		&:last-child{
+			margin-top: 0;
+		}
+	}
+	&__card-title{
+		@include font-primary(18px, $color-text-tertiary, 700, 22px);
+		margin-top: 15px;
+		padding: 10px 10px;
+	}
+	&__figure{
+		padding: 15px 15px;
+	}
+	&__figure-stars{
+		margin-top: 16px;
+		padding: 5px 5px;
+		margin-right: 66px;
+	}
+	&__footer{
+		display: flex;
+		align-items: center;
+	}
+}
+.help{
+	.container{
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		margin-top: 100px;
+	}
+	&__title{
+		@include font-primary(36px, $color-text-primary, 700, 43px);
+	}
+	&__item{
+		@include font-primary(18px, $color-text-tertiary, 400, 25px);
+		margin-top: 15px;
+		display: flex;
+		align-items: center;
+		&::before{
+			content: '';
+			background-image: url('../img/icon-help-svg.svg');
+			background-size: contain;
+			background-repeat: no-repeat;
+			display: block;
+			width: 20px;
+			height: 20px;
+			margin-right: 10px;
+			flex-shrink: 0;
+		}
+	}
+	&__list{
+		margin-top: 40px;
+	}
+	&__intro{
+		margin-right: 190px;
+	}
+}
+.online-session{
+	&__container{
+		display: flex;
+		align-items: center;
+		background: rgba(0, 185, 182, 0.1);
+		border-radius: 24px;
+		margin-top: 140px;
+	}
+	&__title{
+		@include font-primary(36px, $color-text-primary, 700, 43px);
+		max-width: 700px;
+		margin-top: 50px;
+	}
+	&__subtitle{
+		@include font-primary(20px, $color-text-primary, 700, 24px);
+		margin-top: 20px;
+		display: flex;
+		align-items: center;
+		&::before{
+			content: '';
+			background-image: url('../img/dot-session.svg');
+			background-size: contain;
+			background-repeat: no-repeat;
+			display: block;
+			width: 5px;
+			height: 5px;
+			margin-right: 5px;
+			flex-shrink: 0;
+		}
+	}
+	&__text{
+		@include font-primary(18px, $color-text-primary, 400, 25px);
+		margin-top: 5px;
+	}
+	&__content{
+		margin-top: 20px;
+	}
+	&__figure{
+		margin-right: 65px;
+	}
+}
+.specialist{
+	&__container{
+		margin-top: 140px;
+		display: flex;
+		align-items: flex-end;
+		justify-content: space-between;
+	}
+	&__title{
+		@include font-primary(36px, $color-text-primary, 700, 43px);
+	}
+	&__subtitle{
+		@include font-primary(18px, $color-text-secondary, 400, 25px);
+		margin-top: 5px;
+	}
+	&__item-title{
+		@include font-primary(20px, $color-text-primary, 700, 28px);
+		margin-top: 50px;
+		position: relative;
+	}
+	&__text{
+		@include font-primary(18px, $color-text-tertiary, 400, 27px);
+		margin-top: 5px;
+		max-width: 690px;
+	}
+	&__list{
+		margin-top: 62px;
+	}
+	&__item-subtitle{
+		@include font-primary(128px, $color-text-secondary, 700, 128px);
+		opacity: 0.1;
+		position: absolute;
+	}
 }
